# minion-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  SPEC.md  cpf.py  docker-compose.yml  litellm_config.yaml  pyproject.toml
.beads/: issues.jsonl  metadata.json
.beads/hooks/: pre-commit
scripts/: authorize_calendar.py  migrate_001_projects.py  migrate_add_parent_id.py  migrate_shopping_quantities.py  migrate_user_projects.py
src/: config.py  main.py  notifications.py  utils.py
src/agent/: __init__.py  agent.py  mcp.py  memory_extractor.py  sdk_agent.py  subagents.py  team.py
src/agent/sdk_tools/: __init__.py
src/agent/tools/: __init__.py  agenda.py  beads.py  bookmarks.py  calendar.py  code.py  contacts.py  ffmpeg.py  files.py  heartbeat_tools.py  interests.py  media.py  memory.py  mood.py  notes.py  profile.py  projects.py  reminders.py  scheduling.py  shopping.py  skills.py  tasks.py  web.py
src/db/: __init__.py  migrations.py  models.py  queries.py
src/integrations/: __init__.py  calendar.py  media_gen.py  silverbullet.py  vision.py  voice.py  weather.py
src/scheduler/: __init__.py  heartbeat.py  jobs.py  scheduler.py
src/services/: reminders.py
src/telegram/: __init__.py  bot.py  commands.py
src/web/: api.py  auth.py  serializers.py  server.py  views.py
src/web/templates/: base.html  bookmarks.html  calendar.html  chat.html  contacts.html  dashboard.html  interests.html  login.html  mood.html  settings.html  shopping.html  task_detail.html  tasks.html
src/web/templates/partials/: bookmark_row.html  contact_row.html  interest_row.html  mood_row.html  shopping_item.html  task_row.html
tasks/done/: 1-project-setup.md  11-voice-transcription.md  12-google-calendar.md  15-morning-summary.md  17-reminder-delivery.md  3-database-models.md  5-task-tools.md  7-agenda-tool.md
tasks/todo/: 10-command-shortcuts.md  13-image-analysis.md  14-scheduler-setup.md  16-eod-review.md  2-config-module.md  4-database-queries.md  6-reminder-tools.md  8-agent-setup.md  9-telegram-bot.md
