[project]
name = "minion"
version = "0.1.0"
description = "Telegram personal assistant bot"
requires-python = ">=3.11"
dependencies = [
    "agno>=2.4.2",
    "aiosqlite>=0.22.1",
    "apscheduler>=3.11.2",
    "fastapi>=0.115.0",
    "google-api-python-client>=2.188.0",
    "google-auth-oauthlib>=1.2.4",
    "openai>=2.15.0",
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=22.5",
    "sqlalchemy>=2.0.46",
    "dateparser>=1.2.0",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
