[project]
name = "minion"
version = "0.1.0"
description = "Telegram personal assistant bot"
requires-python = ">=3.11"
dependencies = [
    "agno>=2.4.2",
    "aiosqlite>=0.22.1",
    "apscheduler>=3.11.2",
    "fastapi>=0.115.0",
    "google-api-python-client>=2.188.0",
    "google-auth-oauthlib>=1.2.4",
    "openai>=2.15.0",
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=22.5",
    "sqlalchemy>=2.0.46",
    "dateparser>=1.2.0",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.0",
    "ty>=0.0.15",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "UP",    # pyupgrade — all upgrade rules
    "I",     # isort
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
]
ignore = [
    "E712",  # SQLAlchemy requires == True/False for SQL generation
]

[tool.ruff.lint.per-file-ignores]
"src/db/queries.py" = ["SIM108"]  # Ternary not always clearer for query builders

[tool.ruff.lint.isort]
known-first-party = ["src"]
