[project]
name = "minion"
version = "0.1.0"
description = "Telegram personal assistant bot"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "apscheduler>=3.11.2",
    "claude-agent-sdk>=0.1.0",
    "fastapi>=0.129.2",
    "google-api-python-client>=2.190.0",
    "google-auth-oauthlib>=1.2.4",
    "openai>=2.21.0",
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=22.6",
    "sqlalchemy>=2.0.46",
    "dateparser>=1.3.0",
    "uvicorn>=0.41.0",
    "geopy>=2.4.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.22",
    "itsdangerous>=2.2.0",
    "readability-lxml>=0.8.4.1",
    "httpx>=0.28.1",
    "mcp>=1.26.0",
    "ddgs>=9.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "litellm[proxy]>=1.70.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.2",
    "ty>=0.0.18",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "UP",    # pyupgrade — all upgrade rules
    "I",     # isort
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
]
ignore = [
    "E712",  # SQLAlchemy requires == True/False for SQL generation
]

[tool.ruff.lint.per-file-ignores]
"src/db/queries.py" = ["SIM108"]  # Ternary not always clearer for query builders
"src/web/server.py" = ["E501"]  # HTML string literals

[tool.ruff.lint.isort]
known-first-party = ["src"]
